[package]
name = "goodbrother"
version = "0.1.0"
authors = ["stscoundrel / Sampo Silvennoinen"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stscoundrel/goodbrother-rust"
description = """
List open PRs in Github by user
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]