[package]
name = "goodbrother"
version = "1.1.0"
authors = ["stscoundrel / Sampo Silvennoinen"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stscoundrel/goodbrother-rs"
description = """
List open PRs in Github by user
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
httpmock = "0.6"
